--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "name": ""
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
     "node-html-parser": "^1.2.21",
+    "parse5": "^6.0.1",
     "request": "^2.88.2",
+    "start": "^5.1.0",
     "steam-totp": "^2.1.1",
     "steam-user": "^4.17.0",
     "steamcommunity": "^3.41.6",
